--- a/app/src/main/res/layout/activity_contract1.xml
+++ b/app/src/main/res/layout/activity_contract1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,20 +11,163 @@
     app:layout_constraintTop_toBottomOf="@+id/textView4"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".contract.Contract1">
+        <!--고정 layout -->
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="101dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="16sp"
+            android:layout_marginLeft="16sp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="277sp"
+            android:layout_marginRight="277sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo" />
+
+        <ImageButton
+            android:id="@+id/loginicon"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/loginicon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageButton
+            android:id="@+id/imageButton4"
+            android:layout_width="27dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="52sp"
+            android:layout_marginLeft="52sp"
+            android:layout_marginEnd="52sp"
+            android:layout_marginRight="52sp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/draw1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageButton3" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="27dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="52sp"
+            android:layout_marginLeft="52sp"
+            android:layout_marginEnd="1sp"
+            android:layout_marginRight="1sp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/map1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
+            app:layout_constraintStart_toEndOf="@+id/imageButton2" />
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="27dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="52sp"
+            android:layout_marginLeft="52sp"
+            android:layout_marginEnd="1sp"
+            android:layout_marginRight="1sp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/information1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+            app:layout_constraintStart_toEndOf="@+id/imageButton" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="27dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="52sp"
+            android:layout_marginLeft="52sp"
+            android:layout_marginEnd="1sp"
+            android:layout_marginRight="1sp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/news1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <!--center-->
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="120dp"
+            android:layout_marginEnd="281dp"
+            android:layout_marginRight="281dp"
             android:text="등기 부등본"
+            android:textColor="#000000"
+            android:textSize="23dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            tools:layout_editor_absoluteX="112dp"
-            tools:layout_editor_absoluteY="67dp" />
+        <TextView
+            android:id="@+id/content1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="13dp"
+            android:layout_marginRight="13dp"
+            android:text="등기부등본과 건축물대장은 해당 부독산, 건물에 대해서 소유자에\n
+대한 사항과 위치, 면접, 구조, 용도, 층수 등에 대한 사항을 알 수 \n 있는 문서인데요, 등기부등본과
+건축물대장을 통해서 계약하려는\n방, 건물의 소유주가 실제 계약을 진행하는 임대인과 동일한지,\n
+건물 또한 등록된 내용과 다른 부분이 없는지 확인해야 합니다. \n\n
+특히, 등기부등본에는 부동산에 대한 설정된 융자, 경매, 저당권에\n
+대해서도 확인할 수 있으니 반드시 확인하고 계약을 진행해야\n합니다. 혹시나 등기부등본과
+건축물대장에 표시된 내용이 다를 수\n있는데 권리 관계는 등기부등본을 기준으로 하며 부동산의 표시는\n
+건축물 대장을 기준으로 하게 되기 때문에 이를 참고하시고, 혹시\n표시가 달라 걱정이 된다면
+인터넷 등기소를 통해 수정을 하시면\n됩니다."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title2" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/title2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="26dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="140dp"
+            android:layout_marginRight="140dp"
+            android:text="등기부등본, 건축물 대장 열람"
+            android:textColor="#040404"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
-</ScrollView>
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="304dp"
+            android:layout_marginLeft="304dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
+            android:text="출처 : 비즈폼"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/content1" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
