--- a/app/src/main/res/layout/activity_contract2.xml
+++ b/app/src/main/res/layout/activity_contract2.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".contract.Information_contractActivity">
+    tools:context=".contract.Contract2">
 
-    <!--고정-->
+    <!--고정 layout -->
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="101dp"
@@ -115,118 +116,79 @@
 
     <!--center-->
 
+
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="302dp"
-        android:layout_marginRight="302dp"
-        android:text="부동산 계약 팁"
+        android:layout_marginStart="32dp"
+
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="281dp"
+        android:layout_marginRight="281dp"
+        android:text="부동산 계약"
         android:textColor="#000000"
-        android:textSize="20dp"
+        android:textSize="23dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.277"
+        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="324dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:background="@drawable/button_color"
-        android:text="등기부등본"
-        android:textColor="#ffffff"
+    <TextView
+        android:id="@+id/title2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="26dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginRight="140dp"
+        android:text="계약은 집주인과 하는 것이다!"
+        android:textColor="#040404"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <TextView
+        android:id="@+id/content1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginRight="13dp"
+        android:text="계약은 집주인이 임대인이고 방을 구하는 여러분이 임차인이 되어\n
+진행되는 것입니다. 계약의 당사자는 반드시 본인과 집주인이\n되어야 한다는 것인데요. 보통은 방을
+구하는 당사자와 집주인,\n중개인이렇게 계약을 진행하겠지만 가끔 특별한 사유로 집주인이\n 직접 계약을
+진행하지 못하는 경우가 발생할 수 있습니다. 이때,\n임대인은 대리인에게 본인의 직인과 대리인 임명장을 통해서
+\n실제로 권한을 부여한 대리인임을 증별할 수 있고 대리인은 부여된\n권한 안에서 대리계약을
+진행할 수 있습니다.\n\n
+
+주의 할 것은, 대리인 계약에서 집주인으로부터 권한을 부여받은\n 대리인일 뿐,
+계약 당사자가 아니기 때문에 계약서상의 성명 직인은\n모두 집주인인 임대인의 것이 들어가야 하며
+계약금도 집주인이\n별도로 말한 내요이 없다면 집주인 명의의 계좌로 입금해야 합니다."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title2" />
+
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="304dp"
+        android:layout_marginLeft="304dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text="출처 : 비즈폼"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="324dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/button_color"
-        android:text="부동산 계약은 집주인과 함께"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/btn3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="324dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/button_color"
-        android:text="계약서(특약사항)"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/btn4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn4"
-        android:layout_width="324dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/button_color"
-        android:text="전입신고"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/btn5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn5"
-        android:layout_width="324dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/button_color"
-        android:text="부동산 방문"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/btn6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn6"
-        android:layout_width="324dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/button_color"
-        android:text="부동산 계약"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/content1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
