--- a/app/src/main/res/layout/activity_information_word.xml
+++ b/app/src/main/res/layout/activity_information_word.xml
@@ -31,52 +31,55 @@
 
     <!--고정-->
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="100dp"
-        android:layout_height="39dp"
+        android:id="@+id/imageView"
+        android:layout_width="101dp"
+        android:layout_height="26dp"
         android:layout_marginStart="16sp"
         android:layout_marginLeft="16sp"
-        android:layout_marginTop="16sp"
-        android:background="#FFFFFF"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="277sp"
+        android:layout_marginRight="277sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
-    <ImageView
-        android:id="@+id/loginicon2"
-        android:layout_width="40sp"
-        android:layout_height="40sp"
-        android:layout_marginTop="16sp"
-        android:layout_marginEnd="11sp"
-        android:layout_marginRight="11sp"
-        android:layout_marginBottom="30sp"
+    <ImageButton
+        android:id="@+id/loginicon"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/loginicon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/loginicon" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageButton4"
+        android:layout_width="27dp"
+        android:layout_height="29dp"
         android:layout_marginStart="52sp"
         android:layout_marginLeft="52sp"
-        android:layout_marginEnd="1sp"
-        android:layout_marginRight="1sp"
-        android:layout_marginBottom="3sp"
-        android:background="@drawable/news1"
+        android:layout_marginEnd="52sp"
+        android:layout_marginRight="52sp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/draw1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton3" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="27dp"
+        android:layout_height="29dp"
         android:layout_marginStart="52sp"
         android:layout_marginLeft="52sp"
         android:layout_marginEnd="1sp"
         android:layout_marginRight="1sp"
-        android:layout_marginBottom="3sp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/map1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton3"
@@ -84,31 +87,56 @@
 
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="27dp"
+        android:layout_height="29dp"
         android:layout_marginStart="52sp"
         android:layout_marginLeft="52sp"
         android:layout_marginEnd="1sp"
         android:layout_marginRight="1sp"
-        android:layout_marginBottom="3sp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/information1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton4"
         app:layout_constraintStart_toEndOf="@+id/imageButton" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageButton2"
+        android:layout_width="27dp"
+        android:layout_height="29dp"
         android:layout_marginStart="52sp"
         android:layout_marginLeft="52sp"
-        android:layout_marginEnd="52sp"
-        android:layout_marginRight="52sp"
-        android:layout_marginBottom="3sp"
-        android:background="@drawable/draw1"
+        android:layout_marginEnd="1sp"
+        android:layout_marginRight="1sp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/news1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="68dp"
+        android:background="#B7B7B7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton3" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="657dp"
+        android:layout_marginBottom="18dp"
+        android:background="#B7B7B7"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!--center-->
 
     <TextView
         android:id="@+id/textView3"
@@ -187,15 +215,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="225dp"
-            android:layout_height="156dp"
-            android:layout_marginTop="204dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginRight="28dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="225dp"
+        android:layout_height="156dp"
+        android:layout_marginTop="204dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
     </androidx.viewpager.widget.ViewPager>
 
 
