--- a/app/src/main/res/layout/activity_infromation10.xml
+++ b/app/src/main/res/layout/activity_infromation10.xml
@@ -20,27 +20,29 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="126dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="12dp"
-        android:background="#FFFFFF"
+        android:layout_width="101dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="16sp"
+        android:layout_marginLeft="16sp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="277sp"
+        android:layout_marginRight="277sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
-
     <ImageView
         android:id="@+id/loginicon2"
-        android:layout_width="45sp"
-        android:layout_height="46sp"
-        android:layout_marginTop="16sp"
-        android:layout_marginEnd="11sp"
-        android:layout_marginRight="11sp"
-        android:layout_marginBottom="30sp"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/loginicon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/loginicon" />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!--center -->
 
     <TextView
